# angular2-mdl

./: .gitignore  CHANGELOG.md  CONTRIBUTION.md  README.md  WORKSPACE  angular-tsconfig.json  build-config.js  gulpfile.js  package-lock.json  package.json  packages.bzl  stylelint-config.json  tsconfig.json  tslint.json
src/: BUILD.bazel  README.md  bazel-tsconfig-build.json  bazel-tsconfig-test.json  module-typings.d.ts
src/demo-app/: index.hbs  main.ts  polyfills.ts  tsconfig.json
src/demo-app/app/: abstract-demo.component.ts  app-module.ts  app.component.scss  app.component.ts  home.html  index.ts
src/demo-app/css/: style.scss
src/lib/: BUILD.bazel  module.spec.ts  package.json  public-api.ts  root-module.spec.ts  tsconfig-tests.json  tsconfig.json  version.ts
src/lib/badge/: mdl-badge.directive.ts
src/lib/button/: BUILD.bazel  button.module.ts  mdl-button.component.ts  public-api.ts
src/lib/card/: BUILD.bazel  card.module.ts  public-api.ts  tsconfig-build.json
src/lib/checkbox/: BUILD.bazel  mdl-checkbox.component.spec.ts  mdl-checkbox.component.ts
src/lib/chips/: BUILD.bazel  tsconfig-build.json
src/lib/common/: BUILD.bazel  append-view-container-ref-directive.ts  common.module.ts  number.property.spec.ts  number.property.ts  public-api.ts
src/lib/dialog/: BUILD.bazel  dialog-reference.ts  dialog.module.ts  dialog.ts  internal-dialog-reference.ts  mdl-alert.component.spec.ts  mdl-alert.component.ts  mdl-dialog.service.spec.ts  tsconfig-build.json
src/lib/dialog-outlet/: BUILD.bazel  mdl-backdrop-overlay.component.ts  mdl-dialog-outlet.component.spec.ts  mdl-dialog-outlet.service.ts  public-api.ts  tsconfig-build.json
src/lib/icon/: BUILD.bazel  icon.module.ts
src/lib/icon-toggle/: BUILD.bazel  icon-toggle.module.ts  mdl-icon-toggle.component.spec.ts  public-api.ts  tsconfig-build.json
src/lib/layout/: BUILD.bazel  layout.module.ts  mdl-layout-header-row.component.spec.ts  mdl-layout-header-row.component.ts  mdl-layout-header-transparent.directive.ts  mdl-layout-spacer.component.ts  mdl-layout.component.spec.ts  mdl-layout.component.ts  tsconfig-build.json
src/lib/list/: BUILD.bazel  list.module.ts  mdl-list.component.ts  tsconfig-build.json
src/lib/menu/: BUILD.bazel  mdl-menu.component.spec.ts  mdl-toggle-menu.directive.spec.ts  public-api.ts
src/lib/popover/: BUILD.bazel  popover-registry.service.ts  popover.component.ts  public-api.ts  tsconfig-build.json
src/lib/radio/: BUILD.bazel  public-api.ts  tsconfig-build.json
src/lib/schematics/: BUILD.bazel
src/lib/select/: BUILD.bazel  keyboard.ts  option.ts  select.component.ts
src/lib/shadow/: BUILD.bazel  mdl-shadow.directive.spec.ts  public-api.ts  shadow.module.ts  tsconfig-build.json
src/lib/slider/: BUILD.bazel  public-api.ts  tsconfig-build.json
src/lib/snackbar/: BUILD.bazel  mdl-snackbar.service.spec.ts  mdl-snackbar.service.ts  tsconfig-build.json
src/lib/spinner/: BUILD.bazel  mdl-spinner.component.ts  public-api.ts  spinner.module.ts
src/lib/switch/: BUILD.bazel  public-api.ts  switch.module.ts
src/lib/table/: BUILD.bazel  mdl-table.component.spec.ts  mdl-table.component.ts  public-api.ts
src/lib/tabs/: BUILD.bazel  mdl-tab-panel-title.component.ts  mdl-tabs.component.spec.ts  public-api.ts  tsconfig-build.json
src/lib/textfield/: BUILD.bazel  mdl-textfield.component.spec.ts  mdl-textfield.component.ts  public-api.ts
src/lib/tooltip/: BUILD.bazel  mdl-tooltip-position.service.ts  mdl-tooltip.component.ts  mdl-tooltip.directive.ts  public-api.ts  tooltip.module.ts
src/mdl/: BUILD.bazel  package.json  public-api.ts  tsconfig-build.json  tsconfig-ngc.json  tsconfig-tests.json
src/mdl/badge/: BUILD.bazel  badge.module.ts  public-api.ts  tsconfig-build.json
src/mdl/button/: BUILD.bazel  mdl-button.component.spec.ts  tsconfig-build.json
src/mdl/card/: BUILD.bazel  mdl-card.component.ts
src/mdl/checkbox/: BUILD.bazel  checkbox.module.ts  public-api.ts  tsconfig-build.json
src/mdl/chips/: BUILD.bazel  chips.module.ts  chips.ts  public-api.ts
src/mdl/common/: BUILD.bazel  animations.ts  boolean-property.ts  mdl-error.ts  native-support.ts  noop.ts  public-api.ts  tsconfig-build.json  version.ts
src/mdl/dialog/: BUILD.bazel  dialog.ts  mdl-dialog-configuration.ts  mdl-dialog.component.spec.ts  mdl-dialog.component.ts  mdl-dialog.service.spec.ts  public-api.ts
src/mdl/dialog-outlet/: BUILD.bazel  dialog-inner-outlet.component.ts  dialog-outlet.module.ts  mdl-dialog-outlet.component.spec.ts  mdl-dialog-outlet.component.ts
src/mdl/icon/: mdl-icon.component.ts  public-api.ts  tsconfig-build.json
src/mdl/icon-toggle/: BUILD.bazel  mdl-icon-toggle.component.ts
src/mdl/layout/: BUILD.bazel  mdl-layout-content.component.ts  mdl-layout-tab-panel.component.ts  mdl-layout-title.component.ts  mdl-layout.component.ts  public-api.ts
src/mdl/list/: BUILD.bazel  mdl-list.component.spec.ts  public-api.ts
src/mdl/menu/: BUILD.bazel  mdl-menu-item.directive.ts  mdl-menu.component.ts  mdl-toggle-menu.directive.ts  menu.module.ts  tsconfig-build.json
src/mdl/popover/: BUILD.bazel  README.md  popover-registry.service.ts  popover.module.ts  popover.spec.ts  popup-position.service.ts
src/mdl/progress/: BUILD.bazel  mdl-progress.component.ts  progress.module.ts  public-api.ts  tsconfig-build.json
src/mdl/radio/: BUILD.bazel  mdl-radio.component.spec.ts  mdl-radio.component.ts  radio.module.ts
src/mdl/schematics/: tsconfig.json
src/mdl/select/: BUILD.bazel  README.md  option.ts  public-api.ts  searchable-component.ts  select.component.ts  select.html  select.module.ts  select.scss  select.spec.ts  tsconfig-build.json
src/mdl/shadow/: BUILD.bazel  mdl-shadow.directive.ts
src/mdl/slider/: BUILD.bazel  mdl-slider.component.spec.ts  mdl-slider.component.ts  slider.module.ts
src/mdl/snackbar/: BUILD.bazel  public-api.ts  snackbar.module.ts
src/mdl/spinner/: BUILD.bazel  tsconfig-build.json
src/mdl/switch/: BUILD.bazel  mdl-switch.component.ts  tsconfig-build.json
src/mdl/table/: BUILD.bazel  table.module.ts  tsconfig-build.json
tools/: BUILD.bazel  (+1 more)
(+94 files in other folders)
