package(default_visibility=["//visibility:public"])

load("//tools:sass_bundle.bzl", "sass_bundle")
load("//tools:defaults.bzl", "ng_module", "ng_package")
load("//:packages.bzl", "MDL_PACKAGES", "MDL_TARGETS", "MDL_SCSS_LIBS",
    "ROLLUP_GLOBALS")

# Root "@angular/mdl" entry-point.
ng_module(
  name = "mdl",
  srcs = glob(["*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/mdl",
  deps = ["//src/mdl/%s" % p for p in MDL_PACKAGES] + [
    "@npm//@angular/forms",
  ],
)

sass_bundle(
  name = "theming_bundle",
  srcs = MDL_SCSS_LIBS,
  entry_point = '//src/mdl/common:theming/_all-theme.scss',
  output_name = "_theming.scss",
)

filegroup(
  name = "overviews",
  srcs = ["//src/mdl/%s:overview" % name for name in MDL_PACKAGES]
)

# Creates the `@angular/mdl` package published to npm.
ng_package(
  name = "npm_package",
  srcs = ["package.json"],
  entry_point = "src/mdl/public_api.js",
  entry_point_name = "mdl",
  globals = ROLLUP_GLOBALS,
  data = [
    ":theming_bundle",
    "//src/mdl/prebuilt-themes:indigo-pink",
    "//src/mdl/prebuilt-themes:deeppurple-amber",
    "//src/mdl/prebuilt-themes:pink-bluegrey",
    "//src/mdl/prebuilt-themes:purple-green",
  ],
  packages = ["//src/mdl/schematics:npm_package"],
  deps = MDL_TARGETS,
  # TODO(devversion): Use the npm package for publishing. Right now this is disabled because
  # we build using AOT for serving & testing, but the `ng_package` rule should not include factory
  # files.
  tags = ["manual"],
)
