package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "button",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/mdl/button",
  deps = [
    "@npm//@angular/core",
    "//src/lib/common",
  ],
)

ng_test_library(
  name = "button_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@npm//@angular/platform-browser",
    "//src/lib/common",
    ":button"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":button_test_sources"],
)

filegroup(
  name = "source-files",
  srcs = glob(["**/*.ts"]),
)
