package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "icon-toggle",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/mdl/icon-toggle",
  deps = [
    "@npm//@angular/common",
    "@npm//@angular/core",
    "@npm//@angular/forms",
    "//src/lib/common",
    "//src/lib/checkbox",
    "//src/lib/icon",
  ],
)

ng_test_library(
  name = "icon_toggle_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@npm//@angular/platform-browser",
    ":icon-toggle"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":icon-toggle_test_sources"],
)

filegroup(
  name = "source-files",
  srcs = glob(["**/*.ts"]),
)
