package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package")
load("//:packages.bzl", "VERSION_PLACEHOLDER_REPLACEMENTS")
load("//tools:defaults.bzl", "jasmine_node_test", "ts_library")

filegroup(
  name = "schematics_assets",
  srcs = glob(["ng-generate/*/files/**/*", "**/*.json"]),
)

ts_library(
  name = "schematics",
  module_name = "@angular/material/schematics",
  srcs = glob(["**/*.ts"], exclude=[
    "**/*.spec.ts",
    "ng-update/test-cases/**/*.ts",
    "ng-generate/*/files/**/*.ts",
  ]),
  deps = [
    "@npm//@angular-devkit/schematics",
    "@npm//@schematics/angular",
    # TODO(devversion): Only include jasmine for test sources (See: tsconfig types).
    "@npm//@types/jasmine",
    "@npm//@types/node",
    "@npm//tslint",
    "@npm//typescript",
  ],
  tsconfig = ":tsconfig.json",
)

# This package is intended to be combined into the main @angular/material package as a dep.
npm_package(
  name = "npm_package",
  srcs = [":schematics_assets"],
  deps = [":schematics"],
  replacements = VERSION_PLACEHOLDER_REPLACEMENTS,
)
