package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "snackbar",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/mdl/snackbar",
  deps = [
    "@npm//@angular/common",
    "@npm//@angular/core",
    "@npm//@angular/forms",
    "@npm//rxjs",
    "//src/lib/common",
    "//src/lib/dialog-outlet",
  ],
)

ng_test_library(
  name = "snackbar_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@npm//@angular/platform-browser",
    "//src/lib/common",
    ":snackbar"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":snackbar_test_sources"],
)

filegroup(
  name = "source-files",
  srcs = glob(["**/*.ts"]),
)
