package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "dialog-outlet",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/mdl/dialog-outlet",
  deps = [
    "@npm//@angular/core",
    "@npm//rxjs",
  ],
)

ng_test_library(
  name = "dialog_outlet_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@npm//@angular/common",
    "@npm//@angular/platform-browser",
    ":dialog-outlet"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":dialog-outlet_test_sources"],
)

filegroup(
  name = "source-files",
  srcs = glob(["**/*.ts"]),
)
