package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "dialog",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/mdl/dialog",
  deps = [
    "@npm//@angular/common",
    "@npm//@angular/core",
    "@npm//rxjs",
    "//src/mdl/button",
    "//src/mdl/dialog-outlet",
  ],
)

ng_test_library(
  name = "dialog_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@npm//@angular/common",
    "@npm//@angular/core",
    "@npm//@angular/platform-browser",
    "@npm//rxjs",
    "//src/mdl/button",
    "//src/mdl/dialog-outlet",
    ":dialog"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":dialog_test_sources"],
)

filegroup(
  name = "source-files",
  srcs = glob(["**/*.ts"]),
)
