package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "menu",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/mdl/menu",
  deps = [
    "@npm//@angular/core",
    "@npm//@angular/platform-browser",
    "//src/mdl/common",
    "//src/mdl/button",
  ],
)

ng_test_library(
  name = "menu_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@npm//@angular/core",
    "@npm//@angular/platform-browser",
    "//src/mdl/common",
    "//src/mdl/button",
    ":menu"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":menu_test_sources"],
)

filegroup(
  name = "source-files",
  srcs = glob(["**/*.ts"]),
)
