package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "progress",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/mdl/progress",
  deps = [
    "@npm//@angular/common",
    "@npm//@angular/core",
  ],
)

ng_test_library(
  name = "progress_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@npm//@angular/common",
    "@npm//@angular/core",
    "@npm//@angular/platform-browser",
    ":progress"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":progress_test_sources"],
)

filegroup(
  name = "source-files",
  srcs = glob(["**/*.ts"]),
)
