package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "shadow",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/mdl/shadow",
  deps = [
    "@npm//@angular/core",
    "//src/mdl/common",
  ],
)

ng_test_library(
  name = "shadow_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@npm//@angular/platform-browser",
    "//src/mdl/common",
    ":shadow"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":shadow_test_sources"],
)

filegroup(
  name = "source-files",
  srcs = glob(["**/*.ts"]),
)
