package(default_visibility=["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_library", "sass_binary")
load("//tools:defaults.bzl", "ng_module", "ng_test_library", "ng_web_test_suite")

ng_module(
  name = "textfield",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/mdl/textfield",
  deps = [
    "@npm//@angular/common",
    "@npm//@angular/core",
    "@npm//@angular/forms",
    "//src/mdl/common",
    "//src/mdl/button",
    "//src/mdl/icon",
  ],
)

ng_test_library(
  name = "textfield_test_sources",
  srcs = glob(["**/*.spec.ts"]),
  deps = [
    "@npm//@angular/common",
    "@npm//@angular/core",
    "@npm//@angular/forms",
    "@npm//@angular/platform-browser",
    "//src/mdl/common",
    "//src/mdl/button",
    "//src/mdl/icon",
    ":textfield"
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":textfield_test_sources"],
)

filegroup(
  name = "source-files",
  srcs = glob(["**/*.ts"]),
)
